syntax = "proto3";

import "google/protobuf/timestamp.proto";

package projects;

service ProjectsService {
    rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
}

message ListProjectsRequest {}

message ListProjectsResponse {
    repeated Project projects = 1;
}

message Project {
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp create_timestamp = 4;
}
